# rag-backend

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CICD.md  CLAUDE.md  Dockerfile  MIGRACION-GEMINI.md  README.md  pyproject.toml  run.sh  setup.cfg  sonar-project.properties
.github/workflows/: ci.yml  security-review.yml
K6/: load-test.js
backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
monitoring/: README.md  alert-availability.json  alert-errors.json  alert-latency.json  apply.sh  dashboard.json  notification-channel.json
scripts/: mutation_gate.py
tests/: test_document_processor.py  test_session_manager.py  test_vector_store.py
